tests/e2e/negative/invalid-alias/input.ei
int x; int y;
alias result = x + y;

int foo();
alias cool = foo();
